<resources>
    <string name="app_name">ACalculadora2</string>
    <string name="txt_num1">Escribe el primer numero</string>
    <string name="txt_num2">Escribe el segundo numero</string>
    <string name="B_Suma">Suma</string>
    <string name="B_Resta">Resta</string>
    <string name="B_Dividir">Dividir</string>
    <string name="B_Multiplicar">Multiplicar</string>
    <string name="txt_Resultado">Resultado</string>
    <string name="B_Calcular">CALCULAR</string>
</resources>
