<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/txt_num1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/txt_num2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2">

        <RadioButton
            android:id="@+id/RB_Suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/B_Suma" />

        <RadioButton
            android:id="@+id/RB_Resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/B_Resta" />

        <RadioButton
            android:id="@+id/RB_Multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/B_Multiplicar" />

        <RadioButton
            android:id="@+id/RB_Dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/B_Dividir" />
    </RadioGroup>

    <Button
        android:id="@+id/B_Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginLeft="167dp"
        android:layout_marginTop="34dp"
        android:onClick="Calcular"
        android:text="@string/B_Calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txt_Resultado"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="59dp"
        android:hint="@string/txt_Resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_Calcular" />
</androidx.constraintlayout.widget.ConstraintLayout>